# PANDA-BEAR

./: .env  .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  A8-Deposition.csv  CHANGELOG.md  CONFIG_FILES.md  CONTRIBUTING.md  LHSgenerator.py  ProcessFlow  ProcessFlow.md  QUICK_START.md  README.md  RunTimes-A10.json  RunTimes-A11.json  RunTimes-A3.json  RunTimes-A9.json  RunTimes-B2.json  RunTimes-B3.json  RunTimes-B4.json  RunTimes-B5.json  RunTimes-C3.json  RunTimes-C4.json  RunTimes-C5.json  RunTimes-C6.json  RunTimes-C7.json  SQLwellplategenerator.py  TODO_FIXME_DOCUMENTATION.md  analyzer_worker_test.py  camera.py  camera_test.tiff  config.ini.example  config_interface_migration.md  configuration_testing_fix.md  db_default_data.sql  db_default_structure.sql  decapper_validation.py  demo_deck.py  demo_menu.py  (+48 more)
.devcontainer/: Dockerfile  devcontainer.json  panda_sdl.dockerfile
.matplotlib/: fontlist-v390.json
100.84.246.115:3306/: panda
3d-prints/: Adapter_V4_2mm.stl  Adapter_v3.stl  Adaptor with Luer Lock -1.00mm.stl  Equipment-Head-Front_v2.stl  Equipment-Head-Rear_v2.stl  PANDA_Tool_Holder_v3.stl  PlateHolderBase_v1_scaled.stl
arduino/: pawduino.ino
cli/: main.py
code/: Analyzer.py  GamryExampleCode.py  OCP_COMTypes.py  PANDA_potentiostat_V2-(Au-test).py  PANDA_potentiostat_V2-(Au-test_OCP).py  ProcessFlow.py  ProcessFlow_chartraw.txt  PstatControl.py  calibration_testing.py  camera-call-camera.py  camera-call-pycapture-test.py  camera.py  camera_call_camera.py  classes.py  contoller.py  controller.py  correction_factor_testing.py  correction_factors.csv  correction_factors.py  dependencies.txt  dry-run1.json  e_panda.py  e_panda_logger.py  exp_a_2_ferrocyanide_assessment_protocol.py  exp_a_ferrocyanide_assessment_protocol.py  exp_a_ferrocyanide_generator.py  exp_a_ferrocyanide_generator_baseline.py  exp_b_pipette_contamination_assessment_protocol.py  exp_b_pipette_contamination_generator.py  exp_b_pipette_contamination_solutions.json  exp_c_rinsing_assessment_generator.py  exp_c_rinsing_assessment_protocol.py  exp_d2_mixing_assessment_generator.py  exp_d2_mixing_assessment_protocol.py  exp_d_mixing_assessment_generator.py  exp_d_mixing_assessment_protocol.py  exp_edot_bleaching_generator.py  exp_edot_bleaching_protocol.py  exp_edot_repeatability_generator.py  exp_edot_repeatability_generator_v2.py  (+75 more)
conda/: panda_sdl_311.yaml
contact_angle_experiment_2025-06-20_151111/: experiment_summary.txt
contact_angle_experiment_2025-06-30_144925/: contact_angle_results_partial.csv  experiment_summary.txt
contact_angle_experiment_2025-06-30_171308/: slide1_posA.tiff
contact_angle_experiment_2025-06-30_172328/: slide1_posA.tiff
contact_angle_experiment_2025-07-01_143046/: slide1_posA_z-38.0.tiff  slide1_posA_z-38.3.tiff  slide1_posA_z-38.5.tiff  slide1_posA_z-38.7.tiff  slide1_posA_z-39.0.tiff  slide1_posA_z-39.3.tiff  slide1_posA_z-39.5.tiff  slide1_posA_z-39.7.tiff  slide1_posA_z-40.0.tiff
contact_angle_experiment_2025-07-01_144013/: slide1_posA_z-39.5.tiff  slide1_posA_z-39.5_1.tiff  slide1_posA_z-39.7.tiff  slide1_posA_z-39.7_1.tiff  slide1_posA_z-40.0.tiff  slide1_posA_z-40.0_1.tiff  slide1_posA_z-40.2.tiff  slide1_posA_z-40.2_1.tiff  slide1_posA_z-40.5.tiff  slide1_posA_z-40.5_1.tiff  slide1_posA_z-40.7.tiff  slide1_posA_z-40.7_1.tiff  slide1_posA_z-41.0.tiff  slide1_posA_z-41.0_1.tiff  slide1_posA_z-41.2.tiff  slide1_posA_z-41.2_1.tiff  slide1_posA_z-41.5.tiff  slide1_posA_z-41.5_1.tiff  slide1_posA_z-41.7.tiff  slide1_posA_z-41.7_1.tiff  slide1_posA_z-42.0.tiff  slide1_posA_z-42.0_1.tiff
contact_angle_experiment_2025-07-01_145314/: slide1_posA_z-39.5.tiff  slide1_posA_z-39.5_1.tiff  slide1_posA_z-39.7.tiff  slide1_posA_z-39.7_1.tiff  slide1_posA_z-40.0.tiff  slide1_posA_z-40.0_1.tiff  slide1_posA_z-40.2.tiff  slide1_posA_z-40.2_1.tiff  slide1_posA_z-40.5.tiff  slide1_posA_z-40.5_1.tiff  slide1_posA_z-40.7.tiff  slide1_posA_z-40.7_1.tiff  slide1_posA_z-41.0.tiff  slide1_posA_z-41.0_1.tiff  slide1_posA_z-41.2.tiff  slide1_posA_z-41.2_1.tiff  slide1_posA_z-41.5.tiff  slide1_posA_z-41.5_1.tiff  slide1_posA_z-41.7.tiff  slide1_posA_z-41.7_1.tiff  slide1_posA_z-42.0.tiff  slide1_posA_z-42.0_1.tiff
contact_angle_experiment_2025-07-01_150242/: slide1_posA_z-39.5.tiff  slide1_posA_z-39.7.tiff  slide1_posA_z-40.0.tiff  slide1_posA_z-40.2.tiff  slide1_posA_z-40.5.tiff  slide1_posA_z-40.7.tiff  slide1_posA_z-41.0.tiff  slide1_posA_z-41.2.tiff
contact_angle_experiment_2025-07-01_151405/: contact_angle_results.csv  experiment_summary.txt  slide1_posA_z-38.0.tiff  slide1_posA_z-38.2.tiff  slide1_posA_z-38.5.tiff  slide1_posA_z-38.7.tiff  slide1_posA_z-39.0.tiff  slide1_posA_z-39.2.tiff  slide1_posA_z-39.5.tiff  slide1_posA_z-39.7.tiff  slide1_posA_z-40.0.tiff  slide1_posA_z-40.2.tiff  slide1_posA_z-40.5.tiff  slide1_posA_z-40.7.tiff  slide1_posA_z-41.0.tiff  slide1_posA_z-41.2.tiff  slide1_posA_z-41.5.tiff  slide1_posB_z-38.0.tiff  slide1_posB_z-38.2.tiff  slide1_posB_z-38.5.tiff  slide1_posB_z-38.7.tiff  slide1_posB_z-39.0.tiff  slide1_posB_z-39.2.tiff  slide1_posB_z-39.5.tiff  slide1_posB_z-39.7.tiff  slide1_posB_z-40.0.tiff  slide1_posB_z-40.2.tiff  slide1_posB_z-40.5.tiff  slide1_posB_z-40.7.tiff  slide1_posB_z-41.0.tiff  slide1_posB_z-41.2.tiff  slide1_posB_z-41.5.tiff  slide1_posC_z-38.0.tiff  slide1_posC_z-38.2.tiff  slide1_posC_z-38.5.tiff  slide1_posC_z-38.7.tiff  slide1_posC_z-39.0.tiff  slide1_posC_z-39.2.tiff  slide1_posC_z-39.5.tiff  slide1_posC_z-39.7.tiff  (+382 more)
contact_angle_experiment_2025-07-01_164358/: contact_angle_results_partial.csv  experiment_summary.txt  slide1_posA_z-38.0.tiff  slide1_posA_z-38.2.tiff  slide1_posA_z-38.5.tiff  slide1_posA_z-38.7.tiff  slide1_posA_z-39.0.tiff  slide1_posA_z-39.2.tiff  slide1_posA_z-39.5.tiff  slide1_posA_z-39.7.tiff  slide1_posA_z-40.0.tiff  slide1_posA_z-40.2.tiff  slide1_posA_z-40.5.tiff  slide1_posA_z-40.7.tiff  slide1_posA_z-41.0.tiff  slide1_posA_z-41.2.tiff  slide1_posA_z-41.5.tiff  slide1_posB_z-38.0.tiff  slide1_posB_z-38.2.tiff  slide1_posB_z-38.5.tiff  slide1_posB_z-38.7.tiff  (+41 more)
(+16073 files in other folders)
