[project]
name = "panda_lib"
version = "1.5.0"
authors = [
  { name="Gregory Robben", email="grobben@bu.edu" },{name="Harley Quinn", email="hjquinn@bu.edu"}
]
description = "A library for operating a PANDA SDL as a standalone device or in a SiLA environment."
readme = "README.md"
requires-python = ">=3.10,<3.11"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: OS Independent",
]
dependencies = [
    "annotated-types==0.7.0",
    "comtypes==1.4.8",
    "contourpy==1.3.0",
    "cycler==0.12.1",
    "filelock==3.16.0",
    "fonttools==4.53.1",
    "fsspec==2024.9.0",
    "gitdb==4.0.11",
    "GitPython==3.1.43",
    "gpytorch==1.13",
    "greenlet==3.1.0",
    "imageio==2.35.1",
    "jaxtyping==0.2.19",
    "Jinja2==3.1.4",
    "joblib==1.4.2",
    "kiwisolver==1.4.7",
    "lazy_loader==0.4",
    "linear-operator==0.5.3",
    "MarkupSafe==2.1.5",
    "matplotlib==3.9.2",
    "matplotlib>=3.4.0",
    "mpmath==1.3.0",
    "networkx==3.3",
    "numpy==1.26.0",
    "obsws-python==1.7.0",
    "opencv-python==4.10.0.84",
    "packaging==24.1",
    "pandas==2.2.2",
    "pillow==10.4.0",
    "pip>=24.3.1",
    "PuLP==2.9.0",
    "pydantic==2.9.1",
    "pydantic_core==2.23.3",
    "pyparsing==3.1.4",
    "pyserial==3.5",
    "pytest>=8.3.4",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "pytz==2024.2",
    "regex==2024.7.24",
    "ruff>=0.8.3",
    "scikit-image==0.24.0",
    "scikit-learn==1.5.1",
    "scipy==1.14.1",
    "scipy>=1.7.0",
    "sila2==0.12.2",
    "sila2[codegen]",
    "sila2[cryptography]",
    "six==1.16.0",
    "slack_sdk>=3.4.0",
    "smmap==5.0.1",
    "spinnaker-python",
    "SQLAlchemy==2.0.34",
    "sympy==1.13.2",
    "threadpoolctl==3.5.0",
    "tifffile==2024.8.30",
    "tomli==2.0.1",
    "torch==2.4.0",
    "torchaudio==2.4.0",
    "torchvision==0.19.0",
    "tqdm==4.67.1",
    "typeguard==4.3.0",
    "typing_extensions==4.12.2",
    "tzdata==2024.1",
    "uv>=0.6.4",
    "websocket-client==1.8.0",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/PANDA-BEAR"
"Bug Tracker" = "https://github.com/yourusername/PANDA-BEAR/issues"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "nesp_lib",
    "SpinnakerVideoCapture",
    "sartorius",
]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.10
target-version = "py310"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F"]
#select = ["ALL"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = true

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"

[tool.pytest.ini_options]
pythonpath = "panda_lib"

[tool.uv.sources]
spinnaker-python = { path = "P:/software/flir/spinnaker_python-4.0.0.116-cp310-cp310-win_amd64/spinnaker_python-4.0.0.116-cp310-cp310-win_amd64.whl" }
